# Picocalc_NESco

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
core/: README.md  apu.c  apu.h  cpu.c  cpu.h  mapper.c  mapper.h  mapper0.c  mapper30.c  nes_globals.c  nes_globals.h  nes_main.c  nes_main.h  nes_system.h  nes_types.h  ppu.c  ppu.h
docs/audio/: AUDIO_OUTPUT_GAIN_REDESIGN_20260422.md  AUDIO_POP_SUPPRESSION_POWERON_INIT_PLAN_20260422.md
docs/design/: BG_DRAWLINE_HOTPATH_REDESIGN_20260421.md  BG_OPAQUE_LUT_OPTIMIZATION_PLAN_20260429.md  BG_TILE_HOTPATH_OPTIMIZATION_PLAN_20260429.md  BG_TILE_PREPROCESS_REUSE_REDESIGN_20260421.md  BG_TILE_RENDER_LUT_REDESIGN_20260421.md  COMPILE_TIME_LOGGING_CLEANUP_PLAN_20260502.md  CORE1_PARALLELIZATION_WORK_PLAN_20260428.md  GITHUB_ACTIONS_BUILD_CI_PLAN_20260426.md  INFONES_PLATFORM_CONNECTION_PLAN_20260419.md  MAPPER152_IMPLEMENTATION_PLAN_20260429.md  MAPPER_DYNAMIC_ALLOCATION_PLAN_20260419.md  NES_STRETCH_VIEW_TOGGLE_REDESIGN_20260421.md  PPU_LCD_PIPELINE_REDESIGN_20260421.md  SCREENSHOT_DETAILED_DESIGN_20260423.md  SCREENSHOT_IMPLEMENTATION_POLICY_20260423.md  SCREENSHOT_IMPLEMENTATION_PROCEDURE_20260423.md  SCREENSHOT_INTERFACE_SPEC_20260423.md  SCREENSHOT_VIEWER_WORK_PLAN_20260427.md  SPRITE_ACTIVE_LIST_SHADOW_METRICS_PLAN_20260429.md  SPRITE_COMPOSITE_RANGE_OPTIMIZATION_PLAN_20260429.md  SPRITE_OAM_SCAN_FIXED_COST_METRICS_PLAN_20260429.md  SPRITE_SCAN_BREAKDOWN_METRICS_PLAN_20260429.md
docs/project/: ARCHITECTURE.md  CONVENTIONS.md  PLANS.md  PROGRESS_TODO.md  Picocalc_NESco_HISTORY.md  TASKS.md
docs/release/: FINAL_CODE_REVIEW_20260426.md  PUBLIC_RELEASE_PREP_PLAN_20260426.md  README_IMPLEMENTATION_FINAL_AUDIT_20260426.md  README_IMPLEMENTATION_FINAL_AUDIT_PLAN_20260426.md  RELEASE_ARTIFACT_PROCEDURE.md  RELEASE_BUILD_CHECK_1_0_0.md  RELEASE_BUILD_CHECK_20260426.md  RELEASE_GATE_1_0_0.md  RELEASE_NOTES_1_1_24.md
docs/test/: SCREENSHOT_TEST_SPEC_20260423.md
drivers/: boko_flash_trace.c  boko_flash_trace.h  fatfs_diskio.c  i2c_kbd.c  lcd_spi.c  lcd_spi.pio  pwm_audio.c  sdcard.c  sdcard.h
fatfs/: README.md  ff.c  ffconf.h
font/: README.md  menu_font_pixelmplus.h
infones/: CMakeLists.txt  InfoNES.cpp  InfoNES.h  InfoNES_Mapper.cpp  InfoNES_Mapper.h  InfoNES_StructuredLog.cpp  InfoNES_StructuredLog.h  InfoNES_System.h  InfoNES_pAPU.cpp  InfoNES_pAPU.h  K6502.cpp  K6502.h  K6502_rw.h
infones/doc/: GPL2J  readme.html
infones/mapper/: InfoNES_Mapper_006.cpp  InfoNES_Mapper_019.cpp  InfoNES_Mapper_030.cpp  InfoNES_Mapper_030_Diagnostics.h  InfoNES_Mapper_087.cpp  InfoNES_Mapper_152.cpp  InfoNES_Mapper_185.cpp  InfoNES_Mapper_188.cpp  InfoNES_Mapper_235.cpp
platform/: audio.c  audio.h  common_types.h  core1_worker.c  core1_worker.h  display.c  display.h  infones_bridge.h  infones_session.cpp  input.c  input.h  input_lcd_test.c  input_lcd_test.h  main.c  rom_image.c  rom_image.h  rom_menu.c  rom_menu.h  runtime_log.h  screenshot.c  screenshot.h  screenshot_storage.c  screenshot_storage.h  screenshot_viewer.c  screenshot_viewer.h  sram_store.cpp  sram_store.h  version.h
